-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 1.3.0
-
None
-
Windows XP 32bit, MSVC 2008 Express, CDB debugger, CMake 2.8 project.
-
ee3dde9cee445b59e5c41350f2da219e8e2da10b
If debugger needs to open source files they are always opened lower case. This causes issue that those files do not match to files listed to project. This causes some issues:
1. Files are opened twice (at least "Open Documents" show them twice).
2. Breakpoints selected in lowercase named "window" are visible in non-lower case, but they can not be removed from there (instead you add a second breakpoint to same place as previous one).
NOTE! I am using Windows and CDB and also CMake.
Also "Options" -> "C++" -> "Lower case file names" does not change the behavior (it probably shouldn't, but since it does not help I don't know what it does).