CDB: Case-normalize file names returned by CDB

Fixing various problems with breakpoints and opened files caused by CDB
returning lower-case file names.
Task-number: QTCREATORBUG-438
Reviewed-by: hjk <qtc-committer@nokia.com>
Acked-by: mariusSO <qt-info@nokia.com>